--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oasis-supply-chain-dapp",
+  "name": "supply-chain-tracker",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,14 +14,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@metamask/detect-provider": "^2.0.0",
-    "@rainbow-me/rainbowkit": "^1.0.8",
     "aos": "^2.3.4",
-    "ethers": "^6.7.0",
     "framer-motion": "^10.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "viem": "^1.5.4",
-    "wagmi": "^1.3.10",
     "web-vitals": "^3.4.0"
   },
   "devDependencies": {
